# perceptron

./: .gitignore  CMakeLists.txt  LICENSE  a.out  main.c  neural_network_manim.py
docs/: 01_MNIST_GUIDE.md  Activation.md  BatchNormalization.md  MNISTDatasetGuide.md
examples/: .gitignore  endian  endian.c  gates.c  manim_circle.py  model_evaluation.c  nn_concept.c  nn_manim_3b1b.py  weight_adjustment.c
include/: mnist_dataset.c  mnist_dataset.h  neural_network.h
src/: main.c  mnist_dataset.c  neural_network.c
